--- a/.github/workflows/-3-workflow-runners.yml
+++ b/.github/workflows/-3-workflow-runners.yml
@@ -22,3 +22,10 @@ jobs:
                 echo "This job runs on Windows"
                 echo "Runner OS: $RUNNER_OS"
     
+    mac-echo:
+        runs-on: macos-latest
+        steps:
+            - name: Show OS
+              run: |
+                echo "This job runs on Mac OS"
+                echo "Runner OS: $RUNNER_OS"
