--- a/.github/workflows/04-using-actions.yml
+++ b/.github/workflows/04-using-actions.yml
@@ -9,6 +9,10 @@ jobs:
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
-            - name: Printing folders
-              run: ls
-              
+            - name: Setup Node
+              uses: actions/setup-node@v3
+              with:
+                node-version: '20.x'
+            - name: Install dependencies
+              run: npm ci
+              working-directory: 04-using-actions/react-app
