--- a/.github/workflows/04-using-actions.yml
+++ b/.github/workflows/04-using-actions.yml
@@ -5,6 +5,9 @@ on: push
 jobs:
     build:
         runs-on: ubuntu-latest
+        defaults:
+            run:
+                working-directory: 04-using-actions/react-app
         # 0. Checkout the code from repo
         steps:
             - name: Checkout code
@@ -16,3 +19,5 @@ jobs:
             - name: Install dependencies
               run: npm ci
               working-directory: 04-using-actions/react-app
+            - name: Run unit test
+              run: npm run test
